<resources>
    <string name="app_name">Assigment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Amazing Wallpaper in your way</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_category">name</string>
    <string name="Version">Version</string>
    <string name="Author">Author</string>
    <string name="Company">Company</string>
    <string name="Email">Email</string>
    <string name="Website">Website</string>
    <string name="Contact">Contact</string>
    <string name="About">About</string>
</resources>
